changes for spring boot

--- a/user-ms/src/main/resources/application-dev.properties
+++ b/user-ms/src/main/resources/application-dev.properties
@@ -1,7 +1,4 @@
 spring.application.name=user-ms
-
-spring.profiles.active=test
-
 # H2 in-memory DB
 spring.datasource.url=jdbc:h2:mem:userdb
 spring.datasource.driver-class-name=org.h2.Driver
@@ -64,4 +61,5 @@ resilience4j.circuitbreaker.instances.courseServiceCB.permittedNumberOfCallsInHa
 resilience4j.circuitbreaker.instances.courseServiceCB.slidingWindowSize=10
 resilience4j.circuitbreaker.instances.courseServiceCB.waitDurationInOpenState=20s
 
-feature.welcome-message=Welcome to the Default Profile!
+my.prop.name=dev-env
+feature.welcome-message=Hello Developer! (DEV Profile)
