--- a/user-ms/build.gradle
+++ b/user-ms/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.5.4'
+	id 'org.springframework.boot' version '3.4.4'
 	id 'io.spring.dependency-management' version '1.1.7'
 }
 
@@ -33,9 +33,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'  // latest version
-	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
+	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.1.0'	// circuit breaker dependency
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	// For Redis caching (recommended for production)
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+	// For Caffeine (fast in-memory, local cache)
+	implementation 'com.github.ben-manes.caffeine:caffeine'
+	implementation 'org.springframework.boot:spring-boot-starter-aop'
 }
 bootJar{
 	mainClass =" com.course.platform.UserMsApplication"
